CanvasRenderingContext2D.drawImage should ignore the EXIF orientation if the image-orientation is none https://bugs.webkit.org/show_bug.cgi?id=209849

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2020-04-06
Reviewed by Darin Adler.

Source/WebCore:

drawImage() will get the image-orientation of the HTMLImageElement from
its computed style. This will be passed to GraphicsContext::drawImage()
in the ImagePaintingOptions. Previously we were passing FromImage always.

Test: fast/images/image-orientation-none-canvas.html

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):
* html/canvas/CanvasRenderingContext2DBase.h:

LayoutTests:

* fast/images/image-orientation-none-canvas-expected.html: Added.
* fast/images/image-orientation-none-canvas.html: Added.

Canonical link: https://commits.webkit.org/222958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259567 268f45cc-cd09-0410-ab3c-d52691b4dbfc